--- a/html/createScheduleView.html
+++ b/html/createScheduleView.html
@@ -7,7 +7,8 @@
 <h1> Welcome Organizers </h1>
 <p> Use this page to create a new schedule.</p>
 
-<form name="createCalendar" onSubmit="checkDate">
+<form name="createCalendar" onSubmit="validateDaysOfWeek(); return false" accept-charset="UTF-8">
+<!--<form name="createCalendar" method="POST" accept-charset="UTF-8">-->
     <fieldset>
         <legend> Schedule starting information </legend>
         <p> Schedule starting date: </p>
@@ -15,30 +16,30 @@
 
         <p> Select starting schedule time </p>
             <select name="startingTime" required="required">
-            <option value="00:00"> 00:00 </option>
-            <option value="01:00"> 01:00 </option>
-            <option value="02:00"> 02:00 </option>
-            <option value="03:00"> 03:00 </option>
-            <option value="04:00"> 04:00 </option>
-            <option value="05:00"> 05:00 </option>
-            <option value="06:00"> 06:00 </option>
-            <option value="07:00"> 07:00 </option>
-            <option value="08:00"> 08:00 </option>
-            <option value="09:00"> 09:00 </option>
-            <option value="10:00"> 10:00 </option>
-            <option value="11:00"> 11:00 </option>
-            <option value="12:00"> 12:00 </option>
-            <option value="13:00"> 13:00 </option>
-            <option value="14:00"> 14:00 </option>
-            <option value="15:00"> 15:00 </option>
-            <option value="16:00"> 16:00 </option>
-            <option value="17:00"> 17:00 </option>
-            <option value="18:00"> 18:00 </option>
-            <option value="19:00"> 19:00 </option>
-            <option value="20:00"> 20:00 </option>
-            <option value="21:00"> 21:00 </option>
-            <option value="22:00"> 22:00 </option>
-            <option value="23:00"> 23:00 </option>
+            <option value="0000"> 00:00 </option>
+            <option value="0100"> 01:00 </option>
+            <option value="0200"> 02:00 </option>
+            <option value="0300"> 03:00 </option>
+            <option value="0400"> 04:00 </option>
+            <option value="0500"> 05:00 </option>
+            <option value="0600"> 06:00 </option>
+            <option value="0700"> 07:00 </option>
+            <option value="0800"> 08:00 </option>
+            <option value="0900"> 09:00 </option>
+            <option value="1000"> 10:00 </option>
+            <option value="1100"> 11:00 </option>
+            <option value="1200"> 12:00 </option>
+            <option value="1300"> 13:00 </option>
+            <option value="1400"> 14:00 </option>
+            <option value="1500"> 15:00 </option>
+            <option value="1600"> 16:00 </option>
+            <option value="1700"> 17:00 </option>
+            <option value="1800"> 18:00 </option>
+            <option value="1900"> 19:00 </option>
+            <option value="2000"> 20:00 </option>
+            <option value="2100"> 21:00 </option>
+            <option value="2200"> 22:00 </option>
+            <option value="2300"> 23:00 </option>
         </select>
     </fieldset>
 
@@ -49,30 +50,30 @@
 
         <p> Select ending schedule time </p>
         <select name="endingTime" required="required">
-            <option value="00:00"> 00:00 </option>
-            <option value="01:00"> 01:00 </option>
-            <option value="02:00"> 02:00 </option>
-            <option value="03:00"> 03:00 </option>
-            <option value="04:00"> 04:00 </option>
-            <option value="05:00"> 05:00 </option>
-            <option value="06:00"> 06:00 </option>
-            <option value="07:00"> 07:00 </option>
-            <option value="08:00"> 08:00 </option>
-            <option value="09:00"> 09:00 </option>
-            <option value="10:00"> 10:00 </option>
-            <option value="11:00"> 11:00 </option>
-            <option value="12:00"> 12:00 </option>
-            <option value="13:00"> 13:00 </option>
-            <option value="14:00"> 14:00 </option>
-            <option value="15:00"> 15:00 </option>
-            <option value="16:00"> 16:00 </option>
-            <option value="17:00"> 17:00 </option>
-            <option value="18:00"> 18:00 </option>
-            <option value="19:00"> 19:00 </option>
-            <option value="20:00"> 20:00 </option>
-            <option value="21:00"> 21:00 </option>
-            <option value="22:00"> 22:00 </option>
-            <option value="23:00"> 23:00 </option>
+            <option value="0000"> 00:00 </option>
+            <option value="0100"> 01:00 </option>
+            <option value="0200"> 02:00 </option>
+            <option value="0300"> 03:00 </option>
+            <option value="0400"> 04:00 </option>
+            <option value="0500"> 05:00 </option>
+            <option value="0600"> 06:00 </option>
+            <option value="0700"> 07:00 </option>
+            <option value="0800"> 08:00 </option>
+            <option value="0900"> 09:00 </option>
+            <option value="1000"> 10:00 </option>
+            <option value="1100"> 11:00 </option>
+            <option value="1200"> 12:00 </option>
+            <option value="1300"> 13:00 </option>
+            <option value="1400"> 14:00 </option>
+            <option value="1500"> 15:00 </option>
+            <option value="1600"> 16:00 </option>
+            <option value="1700"> 17:00 </option>
+            <option value="1800"> 18:00 </option>
+            <option value="1900"> 19:00 </option>
+            <option value="2000"> 20:00 </option>
+            <option value="2100"> 21:00 </option>
+            <option value="2200"> 22:00 </option>
+            <option value="2300"> 23:00 </option>
         </select>
     </fieldset>
 
@@ -89,6 +90,10 @@
 
     <input type="submit" value="Submit" />
     </form>
+
+
+<p id="errorString">  </p>
+
 </body>
   
 <script type="text/javascript">
@@ -101,5 +106,8 @@
         return null;
     }
 </script>
+
+<script src="../Javascript/validateDaysOfWeek.js" type="application/javascript"></script>
+
 
 </html>
