--- a/html/createScheduleView.html
+++ b/html/createScheduleView.html
@@ -109,5 +109,7 @@
 
 <script src="../Javascript/validateDaysOfWeek.js" type="application/javascript"></script>
 
+<script src="../Javascript/jquery-3.3.1.js" type="application/javascript"></script>
+
 
 </html>
