--- a/html/createScheduleView.html
+++ b/html/createScheduleView.html
@@ -1,4 +1,4 @@
-<!-- TODO add field for giving schedule a personal name -->
+
 <html>
 <head>
 <title> This is the organizer view </title>
@@ -77,13 +77,26 @@
         </select>
     </fieldset>
 
-    <p> Select length of each meeting in minutes</p>
-    <select name="meetingLength" required="required">
-        <option value="10"> 10 </option>
-        <option value="15"> 15 </option>
-        <option value="30"> 30 </option>
-        <option value="60"> 60 </option>
-    </select>
+    <br />
+
+    <label> Select length of each meeting in minutes
+        <br />
+        <select name="meetingLength" required="required">
+            <option value="10"> 10 </option>
+            <option value="15"> 15 </option>
+            <option value="30"> 30 </option>
+            <option value="60"> 60 </option>
+        </select>
+    </label>
+
+    <br />
+    <br />
+
+    <label>
+        Enter the name of your schedule
+        <input type="text" id="scheduleName" required="required">
+
+    </label>
 
     <br />
     <br />
@@ -95,17 +108,6 @@
 <p id="errorString">  </p>
 
 </body>
-  
-<script type="text/javascript">
-
-    function checkDate(){
-        const Http = new XMLHttpRequest();
-        const url = 'https://jsonplaceholder.typicode.com/posts';
-        Http.open("GET", url);
-        Http.send();
-        return null;
-    }
-</script>
 
 <script src="../Javascript/validateDaysOfWeek.js" type="application/javascript"></script>
 
