got schedule to display properly

--- a/html/createScheduleView.html
+++ b/html/createScheduleView.html
@@ -1,4 +1,4 @@
-
+<!-- TODO show secret code created from schedule to the user at some point -->
 <html>
 <head>
 <title> This is the organizer view </title>
